--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "axios": "^0.19.0",
     "axios-storage": "^1.3.8",
     "bootstrap": "^4.3.1",
+    "mdbreact": "^4.19.2",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-confirm-alert": "^2.4.1",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^6.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
